--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="footer-copyright">
-                            <p>Copyright @2020 Finix. Designed By <a href="https://developerjillur.me">Developer Jillur</a></p>
+                            <p>Copyright @2020 Finix. Designed By <a href="www.facebook.com">Abu Sayed khan</a></p>
                         </div>
                     </div>
                 </div>
